# so-doanh-thu

./: BUILD_EXE_ON_WINDOWS.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: windows-exe.yml
docs/: DATABASE_SCHEMA.sql  ERD.md
public/: script.js
scripts/: build-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
