[package]
name = "so_doanh_thu"
version = "1.0.0"
description = "Sổ Doanh Thu HKD - Tauri + SQLite"
authors = ["So Doanh Thu"]
edition = "2021"

[lib]
name = "so_doanh_thu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
